[workspace]
members = [
    "tx-hasher",
    "ic/rs/rosetta-api/icp_ledger",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["The Internet Computer Project Developers"]
description = "Build Once. Integrate Your Blockchain Everywhere. "
edition = "2021"
default-run = "ic-rosetta-api"
documentation = "https://internetcomputer.org/docs/"

[workspace.dependencies]
anyhow = "1.0.80"
arrayvec = "0.7.4"
askama = { version = "0.12.1", features = ["serde-json"] }
assert_matches = "1.5.0"
async-recursion = "1.0.5"
async-trait = "0.1"
async-scoped = { version = "0.8", features = ["use-tokio"] }
axum = { version = "0.7.4", features = ["json"] }
backoff = "0.4"
base64 = { version = "0.13.1" }
# build-info and build-info-build MUST be kept in sync!
build-info = { git = "https://github.com/dfinity-lab/build-info", rev = "701a696844fba5c87df162fbbc1ccef96f27c9d7" }
build-info-build = { git = "https://github.com/dfinity-lab/build-info", rev = "701a696844fba5c87df162fbbc1ccef96f27c9d7", default_features = false }
bytes = "1.6.0"
candid = { version = "0.10.6" }
candid_parser = { version = "0.1.2" }
chrono = { version = "0.4.31", default-features = false, features = [
    "alloc",
    "clock",
    "serde",
] }
ciborium = "0.2.1"
clap = { version = "4.4.6", features = ["derive", "string"] }
cloudflare = { version = "0.9.1", default_features = false, features = [
    "rustls-tls",
] }
crossbeam-channel = "0.5.11"
curve25519-dalek = "4.1.2"
ethnum = { version = "1.3.2", features = ["serde"] }
flate2 = "1.0.28"
futures = "0.3.30"
futures-util = "0.3.30"
hex = { version = "0.4.3", features = ["serde"] }
hyper = { version = "1.2.0", features = ["full"] }
hyper-rustls = { version = "0.24.2", features = ["http2"] }
hyper-socks2 = { version = "0.8.0", default_features = false, features = [
    "rustls",
] }
ic-agent = { version = "0.35.0", features = ["hyper"] }
ic-cdk = "0.13.2"
ic-cdk-macros = "0.9.0"
ic-cdk-timers = "0.7.0"
ic_principal = { version = "0.1.1", default-features = false }
ic-response-verification = "2.3.0"
ic-http-certification = "2.3.0"
ic-certification = "2.3.0"
ic-cbor = "2.3.0"
ic-stable-structures = "0.6.4"
ic-utils = { version = "0.35.0", features = ["raw"] }
ic-btc-interface = { git = "https://github.com/dfinity/bitcoin-canister", rev = "62a71e47c491fb842ccc257b1c675651501f4b82" }
ic-btc-validation = { git = "https://github.com/dfinity/bitcoin-canister", rev = "0e996988693f2d55fc9533c44dc20ae5310a1894" }
ic-btc-test-utils = { git = "https://github.com/dfinity/bitcoin-canister", rev = "62a71e47c491fb842ccc257b1c675651501f4b82" }
indexmap = "2.1.0"
itertools = "0.12.0"
k256 = { version = "0.13.3", default_features = false, features = [
    "arithmetic",
    "ecdsa",
    "pem",
    "pkcs8",
    "precomputed-tables",
    "schnorr",
    "std",
] }
libnss = "0.5.0"
local-ip-address = "0.5.6"
mockall = "0.11.4"
mockito = "1.2.0"
minicbor = { version = "0.19.1", features = ["alloc", "derive"] }
minicbor-derive = "0.13.0"
nix = "0.24.3"
num-traits = { version = "0.2.14", features = ["libm"] }
p256 = { version = "0.13", default_features = false, features = [
    "arithmetic",
    "ecdsa",
    "pem",
    "pkcs8",
] }
ping = "0.5.0"
pkcs8 = "0.10.2"
pretty_assertions = "1.4.0"
prometheus = { version = "0.13.3", features = ["process"] }
prost = "0.12.3"
prost-build = "0.12.3"
quinn = { version = "0.10.2", features = ["ring"] }
rand = "0.8.5"
rcgen = { version = "0.11.1", features = ["zeroize"] }
reqwest = { version = "0.12.3", default-features = false, features = [
    "blocking",
    "http2",
    "json",
    "rustls-tls",
    "rustls-tls-native-roots",
    "socks",
    "stream",
] }
rstest = "0.19.0"
rustls = { version = "0.23.8", default-features = false, features = ["ring", "logging", "tls12"] }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_cbor = "0.11.2"
serde_derive = "1.0"
serde_json = { version = "1.0.107", features = ["std"] }
serde_with = "1.14.0"
serde_yaml = "0.9.29"
signature = "2.1.0"
simple_asn1 = "0.6.2"
slog = { version = "2.7.0", features = [
    "max_level_trace",
    "nested-values",
    "release_max_level_debug",
    "release_max_level_trace",
] }
socket2 = { version = "0.5.6", features = ["all"] }
strum = { version = "0.26.2", features = ["derive"] }
strum_macros = "0.26.2"
syn = { version = "1.0.109", features = ["fold", "full"] }
sync_wrapper = "^1.0.1"
tempfile = "^3.1.0"
thiserror = "1.0.57"
time = { version = "0.3.20", features = ["formatting"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-metrics = "0.3.0"
tokio-rustls = { version = "0.24.1", features = ["dangerous_configuration"] }
tokio-util = { version = "0.7.10", features = ["full"] }
tonic = "0.11.0"
tonic-build = "0.11.0"
tower = { version = "0.4.13", features = ["full"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "fmt",
    "json",
] }
turmoil = "0.6.0"
x509-cert = { version = "0.2.4", features = ["builder", "hazmat"] }
x509-parser = { version = "0.15.1" }

[workspace.dependencies.ic-wasm]
version = "^0.7.1"
default-features = false
features = ["exe"]

